Progress on ExportGrid Dialog

--- a/AZDORestApiExplorer/Presentation/Views/Categories/Core/ProjectMain.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/Categories/Core/ProjectMain.xaml
@@ -23,7 +23,12 @@
     mc:Ignorable="d"
     d:DesignHeight="450" d:DesignWidth="800"
 >
-
+    <d:DesignerProperties.DesignStyle>
+        <Style TargetType="UserControl">
+            <Setter Property="Background" Value="White" />
+        </Style>
+    </d:DesignerProperties.DesignStyle>
+    
     <UserControl.Resources>
         <Style x:Key="OutlineBorder" TargetType="Border">
             <Setter Property="BorderBrush" Value="Black" />
@@ -117,17 +122,32 @@
             <RowDefinition Height="Auto" />
             <!--<RowDefinition Height="*" />-->
         </Grid.RowDefinitions>
-        
-        <Border  Style="{StaticResource CountBorder}" Grid.Row="0">
-            <StackPanel Style="{StaticResource CountStackPanel}" Margin="2">
+
+        <Border Style="{StaticResource CountBorder}" Grid.Row="0"
+                    HorizontalAlignment="Left" VerticalAlignment="Center">
+            <StackPanel Style="{StaticResource CountStackPanel}">
                 <Label Content="Count:" />
-                <TextBlock Text="{Binding Projects.Count}"
-                                   Style="{StaticResource CountTextBlock}"/>
+                <TextBlock Text="{Binding PullRequests.Count}"
+                                Style="{StaticResource CountTextBlock}" />
             </StackPanel>
         </Border>
 
-        <dxg:GridControl 
-            Grid.Row="1"
+        <dxlc:LayoutGroup
+        	View="Group" Orientation="Horizontal" Grid.Row="0" HorizontalAlignment="Right">
+
+            <Button
+                Command="{Binding ExportGridCommand}"
+                CommandParameter="{Binding ElementName=grdResults}"
+                Content="{Binding ExportGridContent, FallbackValue='ExportGrid' }"
+                ToolTip="{Binding ExportGridToolTip, FallbackValue='ExportGrid ToolTip' }"
+                Width="75" VerticalAlignment="Center" />
+
+            <dxlc:LayoutItem  Label="Output Path:" VerticalAlignment="Center">
+                <dxe:TextEdit Text="{Binding OutputFileNameAndPath}"  Width="300" />
+            </dxlc:LayoutItem>
+        </dxlc:LayoutGroup>
+
+        <dxg:GridControl x:Name="grdResults" Grid.Row="1"
             ItemsSource="{Binding Projects.ResultItems}"
             SelectedItem="{Binding Projects.SelectedItem}"               
             FontSize="12"
