--- a/AZDORestApiExplorer.Git/Presentation/Views/PullRequestMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/PullRequestMain.xaml
@@ -1,24 +1,14 @@
 <vncmvvm:ViewBase
     x:Class="AZDORestApiExplorer.Git.Presentation.Views.PullRequestMain"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:prism="http://www.codeplex.com/prism"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-
-    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-    xmlns:dxdb="http://schemas.devexpress.com/winfx/2008/xaml/demobase"
-    xmlns:dxdo="http://schemas.devexpress.com/winfx/2008/xaml/docking"
     xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
     xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
     xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
-
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:prism="http://www.codeplex.com/prism"
     xmlns:vncmvvm="clr-namespace:VNC.Core.Mvvm;assembly=VNC.Core"
-    xmlns:local="clr-namespace:AZDORestApiExplorer.Git.Presentation.Views"
-
-    xmlns:views="clr-namespace:AZDORestApiExplorer.Git.Presentation.Views"
-    xmlns:viewModels="clr-namespace:AZDORestApiExplorer.Git.Presentation.ViewModels"
-
     prism:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d"
     d:DesignHeight="450" d:DesignWidth="800"
@@ -28,9 +18,9 @@
             <Setter Property="Background" Value="White" />
         </Style>
     </d:DesignerProperties.DesignStyle>
-    
-    <UserControl.Resources>
 
+    <UserControl.Resources>
+        
     </UserControl.Resources>
 
     <Grid>
@@ -41,31 +31,29 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <Border Style="{StaticResource CountBorder}" Grid.Row="0" HorizontalAlignment="Left">
+        <Border Style="{StaticResource CountBorder}" Grid.Row="0"
+                    HorizontalAlignment="Left" VerticalAlignment="Center">
             <StackPanel Style="{StaticResource CountStackPanel}" Margin="2">
                 <Label Content="Count:" />
                 <TextBlock Text="{Binding PullRequests.Count}"
-                            Style="{StaticResource CountTextBlock}"/>
+                                Style="{StaticResource CountTextBlock}" />
             </StackPanel>
         </Border>
 
-        <StackPanel Orientation="Horizontal" Grid.Row="0" HorizontalAlignment="Right">
-            <Label Content="Export to:" VerticalAlignment="Center" />
-            <dxe:TextEdit x:Name="teExportPath" Text="C:\Temp\PullRequest" />
-            <StackPanel Orientation="Horizontal">
-                <Button Content=".xlsx" Click="ExportToExcel_Click" Height="20" Width="45"/>
-                <Button Content=".docx" Click="ExportToWord_Click" Height="20" Width="45"/>
-                <Button Content=".html" Click="ExportToHtml_Click" Height="20" Width="35"/>
-                <Button Content=".pdf" Click="ExportToPdf" Height="20" Width="35"/>
-                <Button Content="Show"
-                            Command="{Binding ShowCommand}"
-                            CommandParameter="{Binding ElementName=grdResults}" />                
-                <Button Content="ShowDialog"
-                            Command="{Binding ShowDialogCommand}"
-                            CommandParameter="{Binding ElementName=grdResults}" />
-            </StackPanel>
+        <dxlc:LayoutGroup
+        	View="Group" Orientation="Horizontal" Grid.Row="0" HorizontalAlignment="Right">
 
-        </StackPanel>
+            <Button
+                Command="{Binding ExportGridCommand}"
+                CommandParameter="{Binding ElementName=grdResults}"
+                Content="{Binding ExportGridContent, FallbackValue='ExportGrid' }"
+                ToolTip="{Binding ExportGridToolTip, FallbackValue='ExportGrid ToolTip' }"
+                Width="85" VerticalAlignment="Center" />
+
+            <dxlc:LayoutItem  Label="Output Path:" VerticalAlignment="Center">
+                <dxe:TextEdit Text="{Binding OutputFileNameAndPath}"  Width="300" />
+            </dxlc:LayoutItem>
+        </dxlc:LayoutGroup>
 
         <dxg:GridControl x:Name="grdResults" Grid.Row="1"
                     ItemsSource="{Binding PullRequests.ResultItems}"
@@ -86,50 +74,8 @@
 
         <dxe:TextEdit Grid.Row="2"
             Text="{Binding PullRequests.SelectedItem.url}"
-            TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
+            TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
 
-        <TextBlock Text="{Binding Message}" Grid.Row="3"/>
-        <!--<Grid Grid.Row="3">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-
-            <ContentControl Grid.Column="0" FontSize="12"
-                                Content="{Binding PullRequest.SelectedItem}"
-                                ContentTemplate="{StaticResource ProjectTemplateStackPanel}"/>
-
-            <ContentControl Grid.Column="1"  FontSize="12"
-                                Content="{Binding PullRequest.SelectedItem}"
-                                ContentTemplate="{StaticResource ProjectTemplateGrid}"/>
-
-        </Grid>-->
-        
-        <!--<Grid Grid.Row="3">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-
-            <dxg:GridControl Grid.Column="0"
-                ItemsSource="{Binding Fields.SelectedItem.supportedOperations}"
-                ScrollViewer.CanContentScroll="True"
-                ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                ScrollViewer.VerticalScrollBarVisibility="Auto">
-
-                <dxg:GridColumn FieldName="referenceName" />
-                <dxg:GridColumn FieldName="name" />
-
-            </dxg:GridControl>
-
-        </Grid>-->
-
+        <TextBlock Text="{Binding Message}" Grid.Row="3" />
     </Grid>
-
 </vncmvvm:ViewBase>
