--- a/AZDORestApiExplorer/Presentation/Views/Categories/Core/TeamMain.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/Categories/Core/TeamMain.xaml
@@ -19,6 +19,7 @@
     xmlns:views="clr-namespace:AZDORestApiExplorer.Presentation.Views"
     xmlns:viewModels="clr-namespace:AZDORestApiExplorer.Presentation.ViewModels"
     xmlns:infra="clr-namespace:AZDORestApiExplorer.Core;assembly=AZDORestApiExplorer.Core"
+    xmlns:vncazdopv="clr-namespace:AZDORestApiExplorer.Presentation.Views;assembly=AZDORestApiExplorer.Presentation"
     prism:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d"
     d:DesignHeight="450" d:DesignWidth="800"
@@ -40,29 +41,7 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <Border Style="{StaticResource CountBorder}" Grid.Row="0"
-                    HorizontalAlignment="Left" VerticalAlignment="Center">
-            <StackPanel Style="{StaticResource CountStackPanel}">
-                <Label Content="Count:" />
-                <TextBlock Text="{Binding PullRequests.Count}"
-                                Style="{StaticResource CountTextBlock}" />
-            </StackPanel>
-        </Border>
-
-        <dxlc:LayoutGroup
-        	View="Group" Orientation="Horizontal" Grid.Row="0" HorizontalAlignment="Right">
-
-            <Button
-                Command="{Binding ExportGridCommand}"
-                CommandParameter="{Binding ElementName=grdResults}"
-                Content="{Binding ExportGridContent, FallbackValue='ExportGrid' }"
-                ToolTip="{Binding ExportGridToolTip, FallbackValue='ExportGrid ToolTip' }"
-                Width="75" VerticalAlignment="Center" />
-
-            <dxlc:LayoutItem  Label="Output Path:" VerticalAlignment="Center">
-                <dxe:TextEdit Text="{Binding OutputFileNameAndPath}"  Width="300" />
-            </dxlc:LayoutItem>
-        </dxlc:LayoutGroup>
+        <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0" />
 
         <dxg:GridControl  x:Name="grdResults" Grid.Row="1"
                 ItemsSource="{Binding Teams.ResultItems}"
