--- a/AZDORestApiExplorer/Presentation/Views/Categories/TestMain.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/Categories/TestMain.xaml
@@ -18,7 +18,26 @@
     <UserControl.Resources>
 
     </UserControl.Resources>
-    <Grid>
-            
-    </Grid>
+
+    <dxlc:LayoutGroup Header="Test"
+        Orientation="Vertical"  View="Tabs">
+
+        <dxlc:LayoutGroup.GroupBoxStyle>
+            <Style TargetType="dxlc:GroupBox">
+                <Setter Property="Background" Value="Transparent" />
+                <Setter Property="BorderBrush" Value="Transparent" />
+                <Setter Property="BorderThickness" Value="0" />
+                <Setter Property="Padding" Value="0" />
+                <Setter Property="TitleVisibility" Value="Collapsed" />
+            </Style>
+        </dxlc:LayoutGroup.GroupBoxStyle>
+
+        <dxlc:LayoutGroup Header="Test Plans" >
+            <Grid>
+                <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.TestPlanMainRegion}" />
+            </Grid>
+        </dxlc:LayoutGroup>
+
+    </dxlc:LayoutGroup>
+    
 </UserControl>
