--- a/AZDORestApiExplorer/Presentation/Views/MainWindow.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/MainWindow.xaml
@@ -1,5 +1,6 @@
 ﻿<Window 
     x:Class="AZDORestApiExplorer.Presentation.Views.MainWindow"
+    x:Name="thisMainWindow"    
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -342,6 +343,29 @@
         <dxlc:LayoutGroup VerticalAlignment="Top" Name="lg_Footer" Orientation="Vertical">
             <ContentControl prism:RegionManager.RegionName="{x:Static infra:RegionNames.StatusBarRegion}" />
             <Label Content="lg_Footer Stuff Goes Here" />
+        </dxlc:LayoutGroup>
+
+        <dxlc:LayoutGroup VerticalAlignment="Bottom">
+            <DockPanel Grid.Row="1" >
+
+                <StackPanel Orientation="Horizontal" Margin="5" DockPanel.Dock="Right" >
+                    <Label Content=".NET Runtime: " />
+                    <Label Content="{Binding RuntimeVersion}" />
+                </StackPanel>
+
+                <StackPanel  Orientation="Horizontal" DockPanel.Dock="Left">
+                    <StackPanel Orientation="Horizontal" Margin="5">
+                        <Label Content="V:" />
+                        <Label Content="{Binding ElementName=thisMainWindow, Path=InstanceCountV}" />
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Margin="5">
+                        <Label Content="VM:" />
+
+                        <Label Content="{Binding InstanceCountVM}" />
+                    </StackPanel>
+                </StackPanel>
+
+            </DockPanel>
         </dxlc:LayoutGroup>
 
     </dxlc:LayoutControl>
