--- a/AZDORestApiExplorer/Presentation/Views/Shell.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/Shell.xaml
@@ -1,22 +1,34 @@
 ﻿<Window 
     x:Class="AZDORestApiExplorer.Presentation.Views.Shell"
+    x:Name="thisShell"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"  
     mc:Ignorable="d"     
     
-    xmlns:infra="clr-namespace:AZDORestApiExplorer.Core;assembly=AZDORestApiExplorer.Core"
-    xmlns:prism="http://prismlibrary.com/"
+    xmlns:vncmvvm="clr-namespace:VNC.Core.Mvvm;assembly=VNC.Core"
+    xmlns:views="clr-namespace:AZDORestApiExplorer.Presentation.Views"
+    xmlns:viewModels="clr-namespace:AZDORestApiExplorer.Presentation.ViewModels"
 
-    Title="Shell" Height="300" Width="400">
-    <!--xmlns:mvvm="clr-namespace:Microsoft.Practices.Prism.Mvvm;assembly=Microsoft.Practices.Prism.Mvvm.Desktop"
-        mvvm:ViewModelLocator.AutoWireViewModel="True"-->
-    <d:DesignerProperties.DesignStyle>
-        <Style TargetType="Window">
-            <Setter Property="Background" Value="White" />
-        </Style>
-    </d:DesignerProperties.DesignStyle>
+    xmlns:core="clr-namespace:AZDORestApiExplorer.Core;assembly=AZDORestApiExplorer.Core"
+    
+    xmlns:prism="http://prismlibrary.com/"
+    prism:ViewModelLocator.AutoWireViewModel="False"
+
+    Title="{Binding Title}"
+    Background="{StaticResource ShellBackground}"
+
+    d:DesignWidth="1200" d:DesignHeight="800" 
+    d:DesignStyle="{StaticResource vncDesignStyleW}"
+    >
+    <!-- <d:DesignerProperties.DesignStyle> -->
+    <!-- <Style TargetType="Window"> -->
+    <!-- <Setter Property="Background" Value="White" /> -->
+    <!-- </Style> -->
+    <!-- </d:DesignerProperties.DesignStyle> -->
+
+    <!-- d:DesignWidth="1200" d:DesignHeight="800" -->
 
     <Window.Resources>
 
@@ -34,8 +46,29 @@
             <MenuItem Header="Navigate To ViewB" Command="{Binding NavigateCommand}" CommandParameter="ViewB" />
         </Menu>
 
-        <ContentControl Grid.Row="1" prism:RegionManager.RegionName="{x:Static infra:RegionNames.ContentRegion}" />
+        <ContentControl Grid.Row="1" prism:RegionManager.RegionName="{x:Static core:RegionNames.ContentRegion}" />
 
+        <DockPanel Grid.Row="1" >
+
+            <StackPanel Orientation="Horizontal" Margin="5" DockPanel.Dock="Right" >
+                <Label Content=".NET Runtime: " />
+                <Label Content="{Binding RuntimeVersion}" />
+            </StackPanel>
+
+            <StackPanel  Orientation="Horizontal" DockPanel.Dock="Left">
+                <StackPanel Orientation="Horizontal" Margin="5">
+                    <Label Content="V:" />
+                    <Label Content="{Binding ElementName=thisShell, Path=InstanceCountV}" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="5">
+                    <Label Content="VM:" />
+
+                    <Label Content="{Binding InstanceCountVM}" />
+                </StackPanel>
+            </StackPanel>
+
+        </DockPanel>
+        
     </Grid>
     
 </Window>
