--- a/AZDORestApiExplorer.WorkItemTrackingProcess/Presentation/Views/ProcessMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTrackingProcess/Presentation/Views/ProcessMain.xaml
@@ -45,8 +45,8 @@
         <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0" />
 
         <dxg:GridControl x:Name="grdResults" Grid.Row="1"
-            ItemsSource="{Binding Processes.ResultItems}"
-            SelectedItem="{Binding Processes.SelectedItem}"               
+            ItemsSource="{Binding Results.ResultItems}"
+            SelectedItem="{Binding Results.SelectedItem}"               
             FontSize="12"
             ScrollViewer.CanContentScroll="True"
             ScrollViewer.HorizontalScrollBarVisibility="Auto"
