--- a/AZDORestApiExplorer/Presentation/Views/Categories/Core/ProcessMain.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/Categories/Core/ProcessMain.xaml
@@ -21,7 +21,7 @@
     xmlns:views="clr-namespace:AZDORestApiExplorer.Presentation.Views"
     xmlns:viewModels="clr-namespace:AZDORestApiExplorer.Presentation.ViewModels"
 
-    prism:ViewModelLocator.AutoWireViewModel="True"
+    prism:ViewModelLocator.AutoWireViewModel="False"
     mc:Ignorable="d"
     d:DesignHeight="450" d:DesignWidth="800"
 >
