--- a/AZDORestApiExplorer/Presentation/Views/Categories/Core/ProjectMain.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/Categories/Core/ProjectMain.xaml
@@ -20,7 +20,7 @@
     xmlns:views="clr-namespace:AZDORestApiExplorer.Presentation.Views"
     xmlns:viewModels="clr-namespace:AZDORestApiExplorer.Presentation.ViewModels"
     xmlns:infra="clr-namespace:AZDORestApiExplorer"
-    prism:ViewModelLocator.AutoWireViewModel="True"
+    prism:ViewModelLocator.AutoWireViewModel="False"
     mc:Ignorable="d"
     d:DesignHeight="450" d:DesignWidth="800"
 >
