--- a/AZDORestApiExplorer.Presentation/Views/CommonGridHeader.xaml
+++ b/AZDORestApiExplorer.Presentation/Views/CommonGridHeader.xaml
@@ -1,13 +1,19 @@
 <UserControl
     x:Class="AZDORestApiExplorer.Presentation.Views.CommonGridHeader"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:prism="http://www.codeplex.com/prism"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    
+    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+    xmlns:dxdb="http://schemas.devexpress.com/winfx/2008/xaml/demobase"
+    xmlns:dxdo="http://schemas.devexpress.com/winfx/2008/xaml/docking"
     xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
     xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
     xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:prism="http://www.codeplex.com/prism"
+    
+    prism:ViewModelLocator.AutoWireViewModel="False"
     xmlns:vncmvvm="clr-namespace:VNC.Core.Mvvm;assembly=VNC.Core"
     mc:Ignorable="d"
 >
@@ -59,7 +65,7 @@
                 Width="85" VerticalAlignment="Center" />
 
             <dxlc:LayoutItem  Label="Output Path:" VerticalAlignment="Center">
-                <dxe:TextEdit Text="{Binding OutputFileNameAndPath}"  Width="300" />
+                <dxe:TextEdit x:Name="teOutput" Text="{Binding OutputFileNameAndPath}"  Width="300" />
             </dxlc:LayoutItem>
             
         </dxlc:LayoutGroup>
